# training-ai-fde-anki

./: .env.example  .gitignore  README.md  pyproject.toml
app/: ai.py  db.py  main.py  models.py  routes.py  seed.py  services.py
app/static/: index.html
data/: schema.sql
tests/: conftest.py  test_ai.py  test_routes.py  test_services.py
