[project]
name = "ai-anki"
version = "0.1.0"
description = "AI Anki — a FastAPI flashcard study app with spaced repetition and one Claude-powered endpoint (Week 1 training repo for the AI FDE course)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "anthropic",
    "python-dotenv",
    "pytest",
    "httpx",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
